// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`startProcessing 1`] = `
Array [
  Array [
    null,
    "https://mainnet.infura.io/",
    "",
    true,
  ],
]
`;

exports[`startProcessing 2`] = `
Array [
  Array [
    [Function],
    15000,
  ],
]
`;

exports[`startProcessing 3`] = `
Array [
  Array [
    "orderMatcher",
    100,
  ],
  Array [
    "orderMatcher",
    100,
  ],
]
`;

exports[`startProcessing 4`] = `
Array [
  Array [
    "match|queue",
  ],
  Array [
    "match|queue",
  ],
]
`;

exports[`startProcessing 5`] = `
Array [
  Array [
    [Function],
    500,
  ],
  Array [
    [Function],
    0,
  ],
]
`;

exports[`startProcessing, no serveer 1`] = `
Array [
  Array [
    null,
    "https://mainnet.infura.io/",
    "",
    true,
  ],
  Array [
    null,
    "https://kovan.infura.io/",
    "",
    false,
  ],
]
`;
